--- a/src/common/styles/globals.scss
+++ b/src/common/styles/globals.scss
@@ -109,7 +109,7 @@
   }
 
   html {
-    @apply flex text-sm h-dvh w-dvw flex-col items-start justify-center bg-card p-1;
+    @apply flex h-dvh w-dvw flex-col items-start justify-center bg-card p-1;
   }
 
   body {
